# omnigent-migrate

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-accelerator-plan-1-mvp.md  2026-06-18-accelerator-plan-2-claude-coverage.md  2026-06-18-accelerator-plan-3-codex.md  2026-06-18-accelerator-plan-4-persona-prompt.md  2026-06-18-distiller-plan-1-mvp.md
docs/superpowers/specs/: 2026-06-18-migration-accelerator-design.md  2026-06-18-omnigent-distill-design.md
omnigent_migrate/: __init__.py  cli.py  exporter.py  harness_map.py  ir.py  ledger.py
omnigent_migrate/distill/: archetypes.py  distill.py  profiler.py  schema.py
omnigent_migrate/distill/selector/: anthropic.py  base.py
omnigent_migrate/importers/: _util.py  base.py  claude_code.py  claude_extras.py  codex.py
tests/: test_claude_extras.py  test_claude_importer.py  test_cli.py  test_codex_importer.py  test_exporter.py  test_f1_f2_fixes.py  test_harness_map.py  test_integration_claude.py  test_integration_codex.py  test_ir.py  test_ledger.py  test_util_persona.py
tests/distill/: test_anthropic_selector.py  test_archetypes.py  test_distill.py  test_profiler.py  test_rule_selector.py  test_schema.py
tests/fixtures/claude_project/: .mcp.json  CLAUDE.md
tests/fixtures/claude_project/.claude/: settings.json
tests/fixtures/claude_project/.claude-plugin/: plugin.json
tests/fixtures/claude_project/.claude/agents/: reviewer.md
tests/fixtures/claude_project/.claude/commands/: deploy.md
tests/fixtures/codex_project/: AGENTS.md  config.toml
tests/fixtures/distill_project/: package.json  pyproject.toml
tests/fixtures/distill_project/.claude/agents/: reviewer.md
(+1 files in other folders)
